# hero-proto

./: .dockerignore  .env.example  .gitignore  CHEATSHEET.md  CLAUDE.md  Dockerfile  LICENSE  README.md  TODO.md  codemagic.yaml  docker-compose.yml  fly.toml  futurelist.md  pyproject.toml
ProtoICO/: Faction Palette Swap.html  Faction Palette Swapv2.html  Hero-proto Direction.html  Hero-proto Flowv3.html
alembic/: env.py
analytics/: README.md  arena_convergence.ipynb  combat_dps.ipynb  gacha_ev.ipynb
app/: account_level.py  achievements.py  admin.py  afk.py  analytics.py  arena_constants.py  arena_payout.py  battle_pass.py  captcha.py  changelog.py  collections.py  combat.py  config.py  crafting.py  daily.py  daily_bonus.py  data_export.py  db.py  deps.py  devblog.py  drop_meter.py  economy.py  email_render.py  email_sender.py  event_state.py  fail_pity.py  friend_points.py  gacha.py  gear_logic.py  guild_achievements.py  i18n.py  interactive.py  inventory.py  liveops.py  main.py  middleware.py  milestones.py  models.py  monthly_card.py  named_gear.py  (+21 more)
docs/: ANDROID_FIELD_TEST_2026-05-17.md  API_CONVENTIONS.md  ART_NEEDS.md  BATTLE_REDESIGN_2026-05-17.md  BATTLE_RIG_EVENT_MAPPING.md  BATTLE_UI_HANDOFF.md  BATTLE_VISUALS_STACK.md  COMPETITIVE_TEARDOWN_2026-05.md  LINKS.md  PHASE_2_HUMAN_TEST.md  PLAN_B_INTEGRATION.md  PRD.md  RUNBOOK.md  SOUND.md  STARTUP_AND_TESTING.md  STRIPE_SETUP.md  battle-model-sourcing-guide.md  debug-battle-return-button-2026-05-12.md  debug-quaternius-regression-2026-05-12.md  design-brief-icon-and-ui.md  elevenlabs-bark-script-v1.md  (+7 more)
(+768 files in other folders)
