[project]
name = "hero-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "pyjwt>=2.12.1",
    "pyotp>=2.9.0",
    "prometheus-client>=0.21.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.49",
    "stripe>=11.0.0",
    "uvicorn[standard]>=0.45.0",
]

[project.optional-dependencies]
# Install with: `uv sync --extra postgres`
postgres = ["psycopg[binary]>=3.2.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "fakeredis>=2.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
